[project]
name = "access-to-everything"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cjber", email = "cjberragan@gmail.com" }
]
dependencies = [
    "ukroutes @ git+https://github.com/cjber/ukroutes",
    "fastexcel>=0.10.4",
    "h3pandas>=0.2.6",
    "openai>=1.37.1",
    "python-dotenv>=1.0.1",
    "polars>=1.4.1",
    "dvc>=3.53.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.25.0",
    "ipdb>=0.13.13",
    "matplotlib>=3.9.1",
    "pyqt6>=6.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.dagster]
module_name = "src"
